--- a/application/modules/admin/views/scripts/index/list-works.phtml
+++ b/application/modules/admin/views/scripts/index/list-works.phtml
@@ -5,7 +5,7 @@ $worksList = $pageData['worksList'];
 <script>
 $(function() {
       $('#Works').dataTable( {
-         "iDisplayLength": -1,
+         "iDisplayLength": 10,
          "aLengthMenu": [[10, 25, 50, 100, -1], [10, 25, 50, 100, "Todos"]],
 	 "sPaginationType": "full_numbers",
         "oLanguage": {
@@ -38,7 +38,7 @@ $(function() {
 <div id="conteudo">
     <a href="/">teste</a>
 <h1><?php echo $this->translate("#List of works") ?></h1>
-<div id="rod_container" style="width:800px; margin:0 auto;">
+<div id="rod_container" style="width:860px; margin:0 auto;">
            <table id="Works" class="display">
               <thead>
                 <tr>
@@ -61,8 +61,8 @@ foreach($worksList as $id => $workInfo) {
                   <td>
                     <?php print($workInfo['editorName']) ?></a>
                   </td>
-                  <td><ul><li><a href="/admin/work/remove/?id=<?php echo $id ?>"><?php echo $this->translate('#remove')?></a></p>
-</li></ul>
+                  <td><a href="/admin/work/remove/?id=<?php echo $id ?>"><img src="/img/icon_delete.gif" alt="<?php echo $this->translate('#remove')?>" title="<?php echo $this->translate('#remove')?>"></a></p>
+
                  </td>
                 </tr>
 <?php
