tirando panel do footer e levando para os layouts

--- a/application/layouts/inner_novidades.phtml
+++ b/application/layouts/inner_novidades.phtml
@@ -36,6 +36,7 @@
 <br /><br /><br />
 <div title="" id="rodape_container" class="clearfix" style="background:url(/img/personagens/novidades.png) bottom center no-repeat">
 <?php echo $this->action('footer', 'include', 'includes') ?>
+<?php echo $this->panel() ?>
 </div>
 <!-- /rodape -->
 
