--- a/application/layouts/inner_contato.phtml
+++ b/application/layouts/inner_contato.phtml
@@ -34,6 +34,7 @@
 <br /><br /><br />
 <div title="" id="rodape_container" class="clearfix" style="background:url(/img/personagens/contato.png) bottom center no-repeat">
 <?php echo $this->action('footer', 'include', 'includes') ?>
+<?php echo $this->panel() ?>
 </div>
 <!-- /rodape -->
 
