housekeeping and navigation

--- a/application/modules/admin/views/scripts/post/edit.phtml
+++ b/application/modules/admin/views/scripts/post/edit.phtml
@@ -1,6 +1,5 @@
 <script type="text/javascript" src="/js/tinymce/tinymce.min.js"></script>
-<script type="text/javascript" src="/js/admin/init_richtext.js"></script>
-
+<script type="text/javascript" src="/js/tinycfg.js"></script>
 
 <div id="conteudo">
             <h1><?php print($this->translate('#Edit post')) ?></h1>
