--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -8,8 +8,8 @@ $pageData = $this->pageData;
 <div id="banner-fade">
 
 <ul class="bjqs">
-  <li><a href="/novidades/ruth-rocha-completa-45-anos-de-carreira"><img src="img/banner_45anos.jpg" title="45 anos de histórias divertidas. E vem mais por aí."></a></li>
-  <li><a href="/novidades/livros-biografia-e-muito-mais-sobre-ruth-rocha"><img src="img/banners_novosite.jpg" title="Bem vindo ao novo site da Ruth Rocha"></a></li>
+  <li><a href="/novidades/ruth-rocha-completa-45-anos-de-carreira"><img src="img/banner_45anos.jpg"></a></li>
+  <li><a href="/novidades/livros-biografia-e-muito-mais-sobre-ruth-rocha"><img src="img/banners_novosite.jpg"></a></li>
 </ul>
 
 </div>
