--- a/application/modules/works/views/scripts/edition/explore.phtml
+++ b/application/modules/works/views/scripts/edition/explore.phtml
@@ -8,10 +8,18 @@ $serieData = $pageData['serieData'];
 
 <!-- detalhes -->
 <div class="detalhe">
-<?php if ((isset($pageData['themeLabel'])) && ($pageData['themeLabel'])) { ?>
-<?php echo $this->translate('#Theme:') ?> <a href="<?php echo $this->translate('/editions') ?><?php echo $this->translate('/theme') ?>/<?php echo $pageData['themeUri'] ?>"><?php echo $pageData['themeLabel'] ?></a> <span>|</span>
+<?php if ((isset($pageData['themeData'])) && ($pageData['themeData'])) { ?>
+<?php $sep = ""; ?>
+<?php echo $this->translate('#Theme:') ?>
+<?php foreach($pageData['themeData'] as $theme) { ?>
+<?php echo $sep; ?>
+    <a href="<?php echo $this->translate('/editions') ?><?php echo $this->translate('/theme') ?>/<?php echo $theme['uri'] ?>"><?php echo $theme['term'] ?></a>
+<?php
+    $sep = '<span>|</span> ';
+    } ?>
 <?php } ?>
 <?php if ((isset($pageData['typeLabel'])) && ($pageData['typeLabel'])) { ?>
+<?php echo $sep; ?>
 <?php echo $this->translate('#Age:') ?> <a href="<?php echo $this->translate('/editions') ?>/<?php echo $pageData['sanitizedTypeLabel'] ?>"><?php echo $pageData['typeLabel'] ?></a>
 <?php } ?>
 </div>
