--- a/application/modules/admin/views/scripts/work/create-theme.phtml
+++ b/application/modules/admin/views/scripts/work/create-theme.phtml
@@ -1,5 +1,5 @@
           <div>
-            <h1><?php print(sprintf($this->translate('#%s\'s new character'), $this->title)) ?></h1>
+            <h1><?php print(sprintf($this->translate('#%s\'s new theme'), $this->title)) ?></h1>
           </div>
 <?php echo $this->form; ?>
 <br />
@@ -21,4 +21,3 @@
 <br />
 <br />
 <br />
-
