--- a/application/modules/admin/views/scripts/work/remove-character.phtml
+++ b/application/modules/admin/views/scripts/work/remove-character.phtml
@@ -2,7 +2,7 @@
   $pageData = $this->pageData;
 ?>
         <div id="conteudo">
-          <h1><?php echo $this->translate("#Remove work") ?></h1>
+          <h1><?php echo $this->translate("#Remove character") ?></h1>
         </div>
           <p class="clear_both">
               <?php echo sprintf($this->translate("#Do you confirm removal of character %s from %s? This CAN'T be undone."), "<strong>{$pageData['term']}</strong>", $pageData['title']) ?>
