admin: divs e works:temas

--- a/application/modules/admin/views/scripts/work/create-character.phtml
+++ b/application/modules/admin/views/scripts/work/create-character.phtml
@@ -1,24 +1,4 @@
-          <div>
+        <div id="conteudo">
             <h1><?php print(sprintf($this->translate('#%s\'s new character'), $this->title)) ?></h1>
-          </div>
 <?php echo $this->form; ?>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
+          </div>
