--- a/application/modules/admin/views/scripts/work/change-theme.phtml
+++ b/application/modules/admin/views/scripts/work/change-theme.phtml
@@ -1,4 +1,4 @@
-          <div>
+          <div id="conteudo">
             <h1><?php print(sprintf($this->translate('#Change %s\'s theme'), $this->title)) ?></h1>
-          </div>
 <?php echo $this->form; ?>
+          </div>
