--- a/application/modules/admin/views/scripts/work/create-theme.phtml
+++ b/application/modules/admin/views/scripts/work/create-theme.phtml
@@ -1,23 +1,5 @@
-          <div>
+          <div id="conteudo">
             <h1><?php print(sprintf($this->translate('#%s\'s new theme'), $this->title)) ?></h1>
+
+            <?php echo $this->form; ?>
           </div>
-<?php echo $this->form; ?>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
