--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -31,5 +31,5 @@ jQuery(document).ready(function($) {
 
 <div id="conteudo" class="clearfix" style="width:585px;">
 <div class="box2 clearfix float_left box_home"><?php echo $this->action('featured-book', 'include', 'includes') ?></div>
-<div class="box clearfix float_right box_home"><?php echo $this->action('filter', 'include', 'includes') ?></div>
+<div class="box clearfix float_right box_home"><?php echo $this->action('filter-home', 'include', 'includes') ?></div>
 </div>
