--- a/application/modules/includes/views/scripts/include/featured-character.phtml
+++ b/application/modules/includes/views/scripts/include/featured-character.phtml
@@ -1,8 +1,8 @@
 <!-- box filtro -->
 <h2><img src="img/icone_personagem.png" alt="Personagem em destaque" align="absmiddle" /> Personagem em destaque</h2>
 
-<div><a href="" title="Nome do Personagem"><img src="img/marcacao_personagem.jpg" alt="Nome do Personagem" /></a></div>
+<div><a href="/livros/personagem/catapimba" title="Catapimba"><img src="img/catapimba_home.png" alt="Catapimba" /></a></div>
 
-<a href="" title="Nome do Personagem" class="link_box">Nome do Personagem</a>
+<a href="/livros/personagem/catapimba" title="Catapimba" class="link_box">Catapimba</a>
 
 <!-- /box filtro -->
