--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -373,6 +373,10 @@ h4 {
 	height:275px!important;
 	}
 
+#search_home input[type=submit], #search_home input[type=button] {
+	display:none;
+	}
+
 #paginacao {
 	border-top:2px solid #cbcb90;
 	padding:10px 0 30px;
@@ -591,7 +595,7 @@ textarea {
 	border:3px solid #fff;
 	background:#fff;
 	padding:5px 10px;
-	width:150px;
+	width:195px;
 	margin:0 0 15px 0;
 	}
 
