--- a/application/layouts/inner_biografia.phtml
+++ b/application/layouts/inner_biografia.phtml
@@ -4,6 +4,8 @@
   $controller->setParam('outerModule', $request->getModuleName());
   $params = $controller->getParams();
 ?>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/jquery.pajinate.js"></script>
 
 <!-- header -->
 <?php echo $this->action('header', 'include', 'includes') ?>
