--- a/application/modules/works/views/scripts/index/editions-row.phtml
+++ b/application/modules/works/views/scripts/index/editions-row.phtml
@@ -1,4 +1,4 @@
-<table><?php
+<li><table><?php
     if (!$this->firstRow) {
 ?>
 <tr height="20px">&nbsp;</tr>
@@ -26,3 +26,4 @@ foreach ($this->row as $item) {
 ?>
 </tr>
 </table>
+</li>
