--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -841,55 +841,7 @@ div.dataTables_filter {
 	text-align:left;
 	}
 
-#page_container ul li {
-    list-style: none;
-    margin-left: -2px;
-}
 
-.page_navigation , .alt_page_navigation{
-	padding-bottom: 10px;
-}
-
-.page_navigation a, .alt_page_navigation a{
-	padding:3px 5px;
-	margin:1px;
-	color:white;
-	text-decoration: none;
-	float: left;
-	font-family: Tahoma;
-	font-size: 12px;
-	background-color:#17416c;
-
-}
-.active_page{
-	background-color:white !important;
-	color:black !important;
-}
-
-.no_more{
-	background-color:#72a8c0 !important;
-	color:black !important;
-        pointer-events:none;
-}
-
-.info_text{
-    text-align: left;
-    display:block;
-    padding-top: 8px;
-    clear: both;
-}
-
-.page_link{
-    text-align: center;
-    width: 16px;
-    height: 20px;
-}
-
-.first_link, .previous_link, .last_link, .next_link  {
-    text-align: center;
-    width: 27px;
-    height: 20px;
-}
 
 #admin .works_edition {
     width: 632px;
@@ -1034,3 +986,28 @@ div.dataTables_filter {
 * html .ui-autocomplete {
     height: 250px;
 }
+
+#paginas_biografia .page_navigation a, .alt_page_navigation a{
+	padding:3px 5px;
+	margin:1px;
+	color:white;
+	text-decoration: none;
+	float: left;
+	font-family: Tahoma;
+	font-size: 12px;
+	background-color:#dd3f3a;
+
+}
+
+#paginas_biografia .no_more{
+	background-color:#f95550 !important;
+	color:#000000 !important;
+        pointer-events:none;
+}
+
+#paginas_biografia .page_navigation , .alt_page_navigation{
+	padding-left: 0px;
+}
+
+
+
