explore em duas colunas, forms admin

--- a/application/modules/admin/views/scripts/edition/change-cover.phtml
+++ b/application/modules/admin/views/scripts/edition/change-cover.phtml
@@ -1,4 +1,4 @@
-          <div>
+          <div id="conteudo">
             <h1><?php print(sprintf($this->translate('#Change cover for %s'), $this->pageData['title'])) ?></h1>
-          </div>
 <?php echo $this->form; ?>
+          </div>
