--- a/application/modules/auth/views/scripts/user/create.phtml
+++ b/application/modules/auth/views/scripts/user/create.phtml
@@ -1,4 +1,4 @@
-<div id="MainHeader">
-  <h1><?php print(_("#New user")) ?></h1>
-</div>
+          <div id="conteudo">
+  <h1><?php print($this->translate("#New user")) ?></h1>
 <?php echo $this->form; ?>
+</div>
