--- a/application/modules/auth/views/scripts/user/edit.phtml
+++ b/application/modules/auth/views/scripts/user/edit.phtml
@@ -1,4 +1,4 @@
-<div id="MainHeader">
-  <h1><?php print(_("#Edit user account")) ?></h1>
-</div>
+<div id="conteudo">
+  <h1><?php print($this->translate("#Edit user account")) ?></h1>
 <?php echo $this->form; ?>
+</div>
