ajustes admin e google analytics

--- a/application/layouts/meta.phtml
+++ b/application/layouts/meta.phtml
@@ -5,8 +5,8 @@
 <meta name="googlebot" content="noarchive" />
 <meta name="robots" content="index,follow" />
 <meta name="googlebot" content="ALL" />
-<meta name="keywords" content="...,..." />
-<meta name="description" content="..." />
+<?php echo $this->headMeta()->appendName('keywords', $this->keywords); ?>
+<meta name="description" content="Site Oficial da Ruth Rocha" />
 <meta name="author" content="Além Disso" />
 <meta name="google" content="notranslate" />
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
