--- a/application/modules/admin/views/scripts/edition/change-serie.phtml
+++ b/application/modules/admin/views/scripts/edition/change-serie.phtml
@@ -1,4 +1,4 @@
-          <div>
+          <div id="conteudo">
             <h1><?php print(sprintf($this->translate('#Change %s\'s serie'), $this->title)) ?></h1>
-          </div>
 <?php echo $this->form; ?>
+          </div>
