--- a/application/modules/includes/views/scripts/include/featured-book.phtml
+++ b/application/modules/includes/views/scripts/include/featured-book.phtml
@@ -1,8 +1,8 @@
 <!-- box featured book -->
 <h2><img src="img/icone_livro.png" alt="Livro em destaque" align="absmiddle" /> Livro em destaque</h2>
 
-<div><a href="" title="Nome do Livro"><img src="img/marcacao_livro.jpg" alt="Nome do Livro" /></a></div>
+<div><a href="/livro/poemas-que-escolhi-para-criancas" title="Poemas Que Escolhi Para Crianças"><img src="img/poemas_home.png" alt="Poemas Que Escolhi Para Crianças" /></a></div>
 
-<a href="" title="Nome do Livro" class="link_box">Nome do Livro</a>
+<a href="/livro/poemas-que-escolhi-para-criancas" title="Poemas Que Escolhi Para Crianças" class="link_box">Poemas Que Escolhi Para (...)</a>
 
 <!-- /box  featured book -->
