--- a/application/modules/includes/views/scripts/include/header.phtml
+++ b/application/modules/includes/views/scripts/include/header.phtml
@@ -8,10 +8,10 @@
 
 <!-- menu -->
 <ul id="menu">
-    <li><a href="/livros" title="<?php echo $this->translate("#Books") ?>" id="menu_livros"><?php echo $this->translate("#Books") ?></a></li>
-    <li><a href="/novidades" title="<?php echo $this->translate("#News") ?>" id="menu_novidades"><?php echo $this->translate("#News") ?></a></li>
-    <li><a href="/biografia" title="<?php echo $this->translate("#Biography") ?>" id="menu_biografia"><?php echo $this->translate("#Biography") ?></a></li>
-    <li><a href="/contato" title="<?php echo $this->translate("#Contact") ?>" id="menu_contato"><?php echo $this->translate("#Contact") ?></a></li>
+    <li><a href="<?php echo $this->translate('/works') ?>" title="<?php echo $this->translate("#Books") ?>" id="menu_livros"><?php echo $this->translate("#Books") ?></a></li>
+    <li><a href="<?php echo $this->translate('/news') ?>" title="<?php echo $this->translate("#News") ?>" id="menu_novidades"><?php echo $this->translate("#News") ?></a></li>
+    <li><a href="<?php echo $this->translate('/biography') ?>" title="<?php echo $this->translate("#Biography") ?>" id="menu_biografia"><?php echo $this->translate("#Biography") ?></a></li>
+<!--    <li><a href="<?php echo $this->translate('/contact') ?>" title="<?php echo $this->translate("#Contact") ?>" id="menu_contato"><?php echo $this->translate("#Contact") ?></a></li>-->
 </ul>
 <!-- /menu -->
 
