--- a/application/modules/admin/views/scripts/work/change-description.phtml
+++ b/application/modules/admin/views/scripts/work/change-description.phtml
@@ -1,4 +1,4 @@
-          <div>
-            <h1><?php print(sprintf($this->translate('#Change summary for %s'), $this->title)) ?></h1>
-          </div>
+          <div id="conteudo">
+            <h1><?php print(sprintf($this->translate('#Change description for %s'), $this->title)) ?></h1>
 <?php echo $this->form; ?>
+          </div>
