--- a/application/modules/includes/views/scripts/include/footer.phtml
+++ b/application/modules/includes/views/scripts/include/footer.phtml
@@ -1,10 +1,11 @@
 <div id="rodape" class="clearfix">
-<p class="float_left align_left">&copy;2013 Ruth Rocha. Todos os direitos reservados. Ilustra&ccedil;&otilde;es de Mariana Massarani.	</p>
-<p class="float_right align_right">
+<p class="float_left align_left">&copy;2015 Ruth Rocha. Todos os direitos reservados. Ilustra&ccedil;&otilde;es de Mariana Massarani.	</p>
+<!--<p class="float_right align_right">
 	<a href="" title="Facebook"><img src="/img/icone_facebook.png" alt="Facebook" /></a>
     <a href="" title="Twitter"><img src="/img/icone_twitter.png" alt="Twitter" /></a>
     <a href="" title="Youtube"><img src="/img/icone_youtube.png" alt="Youtube" /></a>
+</p>-->
+<p class="float_right align_right">
+	<a href="https://www.facebook.com/ruthrochaescritora" title="Página Oficial no Facebook" target="_blank"><img src="/img/icone_facebook.png" alt="Facebook" /></a>
 </p>
-
 </div>
-<?php echo $this->panel() ?>
